Bug 753878 - Add UI component for selecting which engines to sync. r=nalexander
UltraBlame original commit: 298753178aea6b187409baeb4bec3fbb8738f961